updated contact fields
